# needle

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  release.yml
src/: cli.rs  config.rs  db.rs  embed.rs  error.rs  fts.rs  hash.rs  index.rs  lock.rs  main.rs  output.rs  query.rs  rank.rs  search_merge.rs  similar.rs  types.rs  watch.rs
src/embed/: local.rs  openai.rs  voyage.rs
