[package]
name = "needle"
version = "0.3.0"
edition = "2024"
license = "MIT"
publish = false

[features]
default = ["local"]
local = ["dep:fastembed"]

[dependencies]
fastembed = { version = "5", optional = true }
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "env"] }
libsql = "0.9.30"
nucleo = "0.5.0"
notify = "8.0.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tantivy = "0.26"
thiserror = "2.0.18"
toml = "1.1.2"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread", "signal", "fs", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
fs2 = "0.4.3"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
tests_outside_test_module = "deny"
